Salesforce CPQ/main/default/objects/FieldSetMetadata__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the user does not have a configuration.</description>
    <inlineHelpText>If the user does not have a configuration.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>