Salesforce CPQ/main/default/objects/FieldSetMetadata__c/fields/FieldSet__c.field-meta.xml
<CustomField>
    <fullName>FieldSet__c</fullName>
    <description>The FieldSet being used for column metadata sizing.</description>
    <label>FieldSet Name</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>