Salesforce CPQ/main/default/objects/FieldSetMetadata__c/fields/FieldSetValidation__c.field-meta.xml
<CustomField>
    <fullName>FieldSetValidation__c</fullName>
    <label>FieldSet Validation</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>